# letterboxd-explorer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: make_sample_data.py
src/letterboxd_explorer/: __init__.py  __main__.py  cli.py  ingest.py  insights.py  models.py  report.py  stats.py  tmdb.py
tests/: conftest.py  test_ingest.py  test_models.py  test_report.py  test_stats.py
